--- a/qualityMatch_notebook.ipynb
+++ b/qualityMatch_notebook.ipynb
@@ -1168,7 +1168,7 @@
     "df = amb_stats.reset_index()\n",
     "df = pd.melt(df, id_vars=\"index\", var_name=\"score\")\n",
     "sns.catplot(x='value', y='index', hue='score', data=df, kind='bar')\n",
-    "plt.savefig('presentation/figures/amb_summary.pdf')\n",
+    "plt.savefig('figures/amb_summary.pdf')\n",
     "plt.show()"
    ]
   },
